Fixed spacing at the bottom of the page body.

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,6 +1,7 @@
 body {
 	background-color: black;
 	color: #eee;
+	padding-bottom: 20px;
 }
 
 main > .container {
